<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.thesis.drinktubig.ui.home.Home"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.thesis.drinktubig.ui.search.Search"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.thesis.drinktubig.ui.locator.Locator"
        android:label="@string/title_locator"
        tools:layout="@layout/fragment_locator" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.thesis.drinktubig.ui.profile.Profile"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>