<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".ui.login.LoginPage">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/Margin180"
        android:layout_height="@dimen/Margin180"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="@dimen/Margin50"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Margin24"
        android:layout_marginTop="@dimen/Margin44"
        android:layout_marginEnd="@dimen/Margin24"
        android:background="@drawable/oval"
        android:hint="@string/Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:textSize="@dimen/Text16" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Margin24"
        android:layout_marginTop="@dimen/Margin2"
        android:layout_marginEnd="@dimen/Margin24"
        android:background="@drawable/oval"
        android:hint="@string/Password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="0dp"
            android:textSize="@dimen/Text16" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Margin10"
        android:layout_marginStart="@dimen/Margin24"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password">

        <CheckBox
            android:id="@+id/remember"
            android:layout_width="@dimen/Margin30"
            android:layout_height="@dimen/Margin30"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Keep_Sign_In"
            android:textSize="@dimen/Text14"/>

    </LinearLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Margin16"
        android:layout_marginEnd="@dimen/Margin24"
        android:textSize="@dimen/Text14"
        android:text="@string/Forgot_Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/Login"
        android:layout_width="@dimen/Margin130"
        android:layout_height="@dimen/Margin50"
        android:background="@drawable/oval"
        android:textSize="@dimen/Text12"
        android:text="@string/Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/Margin24"
        android:layout_marginEnd="@dimen/Margin50"
        android:text="@string/No_Account"
        android:textSize="@dimen/Text14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/Margin24"
        android:layout_marginStart="@dimen/Margin2"
        android:text="@string/Sign_Up"
        android:textSize="@dimen/Text14"
        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>